Bit of cleanup for methods to/from chatcomp/jsonstr